--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.2.7
 dj-database-url==0.5.0
 Django==3.0.6
 django-crispy-forms==1.9.1
+django-filter==2.3.0
+django-filters==0.2.1
 django-heroku==0.3.1
 gunicorn==20.0.4
 html5lib==1.0.1
@@ -17,4 +19,3 @@ sqlparse==0.3.1
 webencodings==0.5.1
 whitenoise==5.1.0
 xhtml2pdf==0.2.4
-django-filter2==2.3.0
